- [UA-12] Incompatibility with DefaultSettings.